--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 <div id="app"></div>
 
 <!-- Dependencies -->
-<script src="./node_modules/react/umd/react.development.js"></script>
-<script src="./node_modules/react-dom/umd/react-dom.development.js"></script>
-<script src="./node_modules/mobx/lib/mobx.umd.js"></script>
-<script src="./node_modules/mobx-react-lite/dist/mobxreactlite.umd.development.js"></script>
-<script src="./node_modules/mobx-react/dist/mobxreact.umd.development.js"></script>
+<script src="./dist/react.production.min.js"></script>
+<script src="./dist/react-dom.production.min.js"></script>
+<script src="./dist/mobx.umd.min.js"></script>
+<script src="./dist/mobxreactlite.umd.production.min.js"></script>
+<script src="./dist/mobxreact.umd.production.min.js"></script>
 
 <!-- Main -->
 <script src="./dist/index.js"></script>
