--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-US">
-<head>
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <meta charset="UTF-8" />
     <title>Github repositories list app</title>
-    <link rel="stylesheet" type="text/css" href="./reset.css">
-    <link rel="stylesheet" type="text/css" href="./dist/styles.css">
+    <link rel="stylesheet" type="text/css" href="./reset.css" />
+    <link rel="stylesheet" type="text/css" href="./dist/styles.css" />
+    <link rel="icon" type="image/png" href="./favicon32.png" />
     <style>
-        html,
-        body,
-        #app {
-          height: 100%;
-        }
+      html,
+      body,
+      #app {
+        height: 100%;
+      }
     </style>
-</head>
-<body>
-<div id="app"></div>
-
-<!-- Dependencies -->
-<script src="./dist/react.production.min.js"></script>
-<script src="./dist/react-dom.production.min.js"></script>
-<script src="./dist/mobx.umd.min.js"></script>
-<script src="./dist/mobxreactlite.umd.production.min.js"></script>
-<script src="./dist/mobxreact.umd.production.min.js"></script>
-
-<!-- Main -->
-<script src="./dist/index.js"></script>
-</body>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="./dist/react.production.min.js"></script>
+    <script src="./dist/react-dom.production.min.js"></script>
+    <script src="./dist/mobx.umd.min.js"></script>
+    <script src="./dist/mobxreactlite.umd.production.min.js"></script>
+    <script src="./dist/mobxreact.umd.production.min.js"></script>
+    <script src="./dist/index.js"></script>
+  </body>
 </html>
